<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/picture_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="matrix" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@color/gray_5" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_5" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/camera_tool_bar" >

        <Button
            android:id="@+id/camera_layout_retry"
            style="@style/camera_panel_btn"
            android:background="@drawable/camera_retry_btn"
            android:text="@string/camera_layout_retry"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/camera_layout_sure"
            style="@style/camera_panel_sure_btn"
            android:background="@drawable/camera_sure_btn"
            android:text="@string/camera_layout_sure"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/camera_layout_move_and_zoom"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>

</LinearLayout>