<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="180dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#21c593"
        android:gravity="center_vertical|center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_cate_tip"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_for_del_dialog"
                android:text="@string/cancel"
                android:textColor="#21c593"
                android:textSize="17sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#e5e5e5" />

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_for_del_dialog"
                android:text="@string/ok"
                android:textColor="#21c593"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/top_layout"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#e5e5e5"
            android:padding="1dp" >

            <EditText
                android:id="@+id/edit_cate_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:hint="@string/add_new_cate_hint"
                android:imeOptions="actionDone"
                android:paddingLeft="13dp"
                android:singleLine="true"
                android:textColor="#b7b9c4"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>