<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="180dp"
    android:background="@drawable/cate_edit_rect_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#82a6d3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_for_del_dialog"
                android:text="@string/cancel"
                android:textColor="#6891c1"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#82a6d3" />

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_for_del_dialog"
                android:text="@string/confirm_add"
                android:textColor="#6891c1"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:padding="1dp" >
            <EditText
                android:id="@+id/edit_cate_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/transparent"
                android:hint="@string/add_new_cate_hint"
                android:imeOptions="actionDone"
                android:paddingLeft="13dp"
                android:singleLine="true"
                android:textColor="#6891c1"
                android:textCursorDrawable="@color/blue_cursor"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>